# mr-t

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yaml
hs-t/: CHANGELOG.md  LICENSE  flake.nix  hie.yaml  hs-t.cabal
hs-t/app/: Main.hs
rusty-t/: Cargo.toml  flake.nix
rusty-t/src/: main.rs
src/mr_t/: __init__.py  dummy_client.py  eiger_stream1.py  eiger_zmq.py  h5.py  rx.py  server.py  udp.py
