cabal-version:      3.4
name:               hs-t
version:            0.1.0.0
synopsis:           Small dummy client for Mr. T
-- description:
license:            MIT
license-file:       LICENSE
author:             Philipp Middendorf
maintainer:         philipp.middendorf@desy.de
-- copyright:
category:           Network
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hs-t
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
                    , text
                    , bytestring
                    , optparse-applicative
                    , network
                    , binary
                    , logging
                    , text-display
                    
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost
                      , BlockArguments
                      , LambdaCase
                      , OverloadedStrings
                      , DerivingStrategies
                      , DerivingVia
                      , DuplicateRecordFields
                      , OverloadedRecordDot
                      , NamedFieldPuns
                      , GeneralizedNewtypeDeriving
